# simple_game

./: .gitattributes  CMakeLists.txt  GAME.sln  README.md  level.txt  main.cpp
GAME/: Colors_of_Textures.h  DrawEngine.cpp  DrawEngine.h  Enemy.cpp  Enemy.h  GAME.vcxproj  GAME.vcxproj.filters  Game.cpp  Game.h  Heroe.cpp  Heroe.h  Object.cpp  Object.h  Route+Coordinate.cpp  Storage.cpp  Storage.h  Voltage.cpp  Voltage.h  level.txt  main.cpp  resource.h
include/: curses.h
lib/: pdcurses.lib
src/: Game.cpp  Game.h  game.cpp  game.h
src/board/: board.cpp  board.h  engine_buffer.cpp  engine_buffer.h  route_coordinate.cpp  route_coordinate.h  storage.cpp  storage.h
src/draw/: draw_engine.cpp  draw_engine.h  texture_colors.h
src/objects/: action.h  enemy.h  hero.h  object.cpp  object.h  object_map.h  voltage.h
src/objects/enemy/: enemy.cpp  enemy.h
src/objects/hero/: hero.cpp  hero.h  heroe.h
src/objects/voltage/: voltage.cpp  voltage.h
src/route_coordinate/: route_coordinate.cpp  route_coordinate.h
src/state_buffer/: state_buffer.cpp  state_buffer.h
